# edeon-desktop

./: .gitignore  CLAUDE.md  CODEBASE_ANALYSIS.md  EDEON_COMPLETE_FEATURE_LIST.txt  EDEON_DECISION_LAYER_PLAN.md  EDEON_DECISION_LAYER_PLAN.md:Zone.Identifier  EDEON_FOSS_INTEGRATIONS_PLAN.md  EDEON_FOSS_INTEGRATIONS_PLAN.md:Zone.Identifier  EDEON_KILLER_FEATURES_IMPLEMENTATION_PLAN.md  EDEON_KILLER_FEATURES_IMPLEMENTATION_PLAN.md:Zone.Identifier  EDEON_TIER1_WORKFLOWS_IMPLEMENTATION_PLAN.md  EDEON_TIER1_WORKFLOWS_IMPLEMENTATION_PLAN.md:Zone.Identifier  EDEON_TIER2_WORKFLOWS_IMPLEMENTATION_PLAN.md  EDEON_TIER2_WORKFLOWS_IMPLEMENTATION_PLAN.md:Zone.Identifier  Edeon_QSAR_Studio_development_plan.md  Edeon_UI.txt  IMPLEMENTATION_PLAN.md  IMPLEMENTED_FEATURES.md  Knowledge_Hub.md  LICENSE  MVP.txt  README.md  check_cls_results.py  do  edeon.db  edeon_90_day_implementation_plan.md  edeon_90_day_implementation_plan.md:Zone.Identifier  edeon_desktop_workflow_view.svg:Zone.Identifier  edeon_docking_workbench_spec.md  edeon_docking_workbench_spec.md:Zone.Identifier  edeon_phase0_spec.md  edeon_phase0_spec.md:Zone.Identifier  edeon_phase1_spec.md  edeon_phase1_spec.md:Zone.Identifier  edeon_phase2_spec.md  edeon_phase2_spec.md:Zone.Identifier  edeon_phase3_spec.md  edeon_phase3_spec.md:Zone.Identifier  edeon_phase4_spec.md  edeon_phase4_spec.md:Zone.Identifier  (+19 more)
src-tauri/: Cargo.lock.bak  Cargo.toml  curated_library_2026-06-11 (3).sdf  edeon_report_057deeca.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  journal.rs  lib.rs  main.rs  models.rs  (+1 more)
(+1118 files in other folders)
