[package]
name = "edeon-desktop"
version = "0.1.0"
description = "Edeon Desktop — Agrochemical Lead Optimization Platform"
authors = ["Sergio"]
edition = "2021"

[lib]
name = "edeon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
tokio = { version = "1", features = ["sync", "time"] }
